--- a/index.html
+++ b/index.html
@@ -25,25 +25,27 @@
         </header>
     </header>
 
-    <section class="hero"></section>
+    <section class="hero">
+        <img src="Develop\assets\images\digital-marketing-meeting.jpg" alt="Image of 4 people in a boardroom looking at papers on a desk" class="hero">
+    </section>
 
     <section class="content">
         <nav class="search-engine-optimization">
-            <img src="./Develop/assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./Develop/assets/images/search-engine-optimization.jpg" alt="Tabletop with keyboard, magnifying glass, coffee, pens, and a notebook that says SEO" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </nav>
         <nav id="online-reputation-management" class="online-reputation-management">
-            <img src="./Develop/assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./Develop/assets/images/online-reputation-management.jpg" alt="Person sitting at desk with phone in left hand and a laptop with graphs and title of Reputation" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </nav>
         <nav id="social-media-marketing" class="social-media-marketing">
-            <img src="./Develop/assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./Develop/assets/images/social-media-marketing.jpg" alt="Overhead view of people sitting at desk with computers and pictures of various icons on table" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -54,21 +56,21 @@
     <aside class="benefits">
         <aside class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./Develop/assets/images/lead-generation.png" />
+            <img src="./Develop/assets/images/lead-generation.png" alt="Image of lightbulb comprised of a gear, funnel with down arrow, and dollar sign"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </aside>
         <aside class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./Develop/assets/images/brand-awareness.png" />
+            <img src="./Develop/assets/images/brand-awareness.png" alt="Composite image of lightbult with antenna tower giving off signals" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </aside>
         <aside class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./Develop/assets/images/cost-management.png" />
+            <img src="./Develop/assets/images/cost-management.png" alt="Image of gears overlapped by dollar signs" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
@@ -76,7 +78,7 @@
     </aside>
 
     <footer class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2023 Horiseon Social Solution Services, Inc.
         </p>
