--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <h1>Hori<em class="seo">seo</em>n</h1>
         <header>
             <ul>
                 <li>
@@ -30,7 +30,7 @@
     </section>
 
     <section class="content">
-        <nav class="search-engine-optimization">
+        <nav id="search-engine-optimization" class="search-engine-optimization">
             <img src="./Develop/assets/images/search-engine-optimization.jpg" alt="Tabletop with keyboard, magnifying glass, coffee, pens, and a notebook that says SEO" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
